--- a/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/les-dates.html
+++ b/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/les-dates.html
@@ -15,17 +15,13 @@
   </header>
   <a href="initProgJSMenu2.html" class="bgc-up">Retour</a>
   <main>
-    <h2>Les dates <a href="../../PDF/Les_dates.pdf" target="_blank" class="doc-pdf">PDF</a></h2>
+    <h2>La programmation événementielle en Javascript</h2>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
       </section>
       <ul class="li-empty">
         <li><a href="#objet-date">L'objet date</a></li>
-        <li><a href="#setters_getters">Setters et getters</a></li>
-        <li><a href="#manip-date">Les manipulations de dates</a></li>
-        <li><a href="#format-date">Formater les dates</a></li>
-        <li><a href="#moment-js">Moment.js</a></li>
       </ul>
     </nav>  
     <section class="bgc-section">
