Add item in lexique.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href= "site/001-Front-end/02-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
         <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
+        <li><a href= "site/lexique.html">lexique</a></li>
       </ul>
     </section>
   </main>
