--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/progEvent.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/progEvent.html
@@ -31,7 +31,7 @@
     <section class="bgc-section">
       <h2 id="intro" class="sub-title-h3">Introduction</h2>
       <article>
-        <h3>Le DOM</h3>
+        <h3 id="#dom">Le DOM</h3>
         <p>
           Cela consiste à manipuler des objets, éléments, événements et différentes fonctions pour mettre en place des 
           interactions avec l'utilisateur. Nous parlerons alors d'interface web réactive.
