--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
@@ -20,6 +20,9 @@
         <li>
           <a href="progEvent.html">La programmation événementielle en Javascript</a>
         </li>
+        <li>
+          <a href="progEvent.html">Les formulaires HTML et JavaScript</a>
+        </li>
       </ul>
       </nav>
   </main>
