--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <section class="relative flex-v-center">
       <img class="img-logo" src="site/images/code.jpg" alt="Code">
       <ul class="training-bloc">
+        <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
         <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
         <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
