Refonte du site

--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
-  <header class="header-div">
-    <div class="div-header li">
-      <lu>
-        <li class="home active">Accueil</li>
-        <li>Ma formation</li>
-      </lu>
-    </div>
-    <h1>Graduate développeur PHP/Symfony</h1>
+  <header class="bgc-header">
+    <nav aria-label="Breadcrumb" class="header-nav">
+      <ul class="breadcrumb">
+        <li class="active">Accueil</li>
+        <li><a href="site/liens-utiles.html">Liens utiles</a></li>
+        <li><a href="site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a href="#">Back-end</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
-    <section class="relative flex-v-center">
-      <img class="img-logo" src="site/images/code.jpg" alt="Code">
-      <ul class="training-bloc">
+    <section>
+      <h2>Plan</h2>
+      <!-- <img class="img-logo" src="site/images/code.jpg" alt="Code"> -->
+      <ul>
         <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
-        <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Développement front-End</a></li>
-        <li><a href= "#">Développement back-End</a></li>
+        <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Front-End</a></li>
+        <li><a href= "#">Back-End</a></li>
         <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
         <li><a href= "site/lexique.html">lexique</a></li>
       </ul>
