--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -8,19 +8,20 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
-  <header>
-    <nav>
-      <ul>
-        <li>Accueil</li>
-        <li class="active">front-end</li>
+  <header class="bgc-header">
+    <nav aria-label="Breadcrumb" class="header-nav">
+      <ul class="breadcrumb">
+        <li><a href="../../index.html">Accueil</a></li>
+        <li><a href="../liens-utiles.html">Liens utiles</a></li>
+        <li class="active">Front-end</li>
+        <li><a href="#">Back-end</a></li>
       </ul>
     </nav>
-    <p class="bgc-up"><a href="../../../index.html">Retour</a></p>
   </header>
   <main>
     <nav>
-      <section class="return" >
-        <h2 class="sub-title-h2">Sommaire</h2>
+      <section class="return">
+        <h2 class="sub-title-h2">Front-End</h2>
       </section>
       <ol>
         <li><a href="../01-HTML5_et_CSS3/MainMenuHtmlCss.html">HTML5 et CSS3</a></li>
