--- a/site/001-Front-end/01-HTML5_et_CSS3/MainMenuHtmlCss.html
+++ b/site/001-Front-end/01-HTML5_et_CSS3/MainMenuHtmlCss.html
@@ -9,14 +9,13 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
-  <header>
-    <nav>
-      <ul>
-        <li><a href="../../../index.html">Acceuil</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+  <header class="bgc-header">
+    <nav aria-label="Breadcrumb" class="header-nav">
+      <ul class="breadcrumb">
+        <li><a href="../../index.html">Accueil</a></li>
+        <li><a href="../liens-utiles.html">Liens utiles</a></li>
+        <li class="active">Front-end</li>
+        <li><a href="#">Back-end</a></li>
       </ul>
     </nav>
   </header>
