Add resetl-all-css file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </nav>
   </header>
   <main>
-    <section>
-      <h2>Plan</h2>
+    <section class="summary-section">
+      <h1 class="title-h1">Plan</h1>
       <!-- <img class="img-logo" src="site/images/code.jpg" alt="Code"> -->
       <ul>
         <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
@@ -31,6 +31,9 @@
         <li><a href= "site/lexique.html">lexique</a></li>
       </ul>
     </section>
+    <aside>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptatem? Earum, neque? Repellat, quidem, rerum recusandae atque suscipit, labore iure hic quos voluptate aut nobis aliquid neque necessitatibus reprehenderit deleniti?</p>
+    </aside>
   </main>
   <footer>
     <p>&copy;2021 - Graduate développeur PHP/Symfony</p>
